--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= content_for?(:title) ? yield(:title) : "Wizard" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Vizard Rails" %>">
@@ -12,15 +13,26 @@
   </head>
   <body>
     <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <% if( user_signed_in? ) %>
+      <nav class="navbar navbar-default" role="navigation">
         <div class="container">
-          <% if( user_signed_in? ) %>
-          <div class="pt15">
-          <a class="company-logo" href="/">Wizard</a><span class="tagline">beta</span>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Wizard <span>Beta</span></a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/sandboxes">Sandboxes</a></li>
-            <li><a href="#">Templates</a></li>
-            <li><a href="#">Tutorials</a></li>
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Documents</a></li>
+            <li><a href="#">Tools</a></li>
           </ul>
           <ul class="nav navbar-right top-nav">
             <li class="dropdown">
@@ -36,10 +48,24 @@
               </ul>
             </li>
           </ul>
-          <% else %>
-          <div class="pt15">
-          <a class="company-logo" href="#">Wizard</a><span class="tagline">beta</span></div>
-            <div class="nav pull-right">
+        </div><!-- /.navbar-collapse -->
+        </div>
+      </nav>
+      <% else %>
+      <nav class="navbar navbar-default" role="navigation">
+        <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Wizard <span>Beta</span></a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="nav pull-right">
               <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
               Sign in <span class="caret"></span>
               </button>
@@ -53,17 +79,17 @@
                   });
                 </script>
           </div>
-      </div>
-            </div>
-      </div>
-      <!--/.nav-collapse -->
-          <% end %>
-          <div class="container">
-              <div class="clearfix toolbarName">
-              </div>
-          </div>
         </div>
       </nav>
+      <% end %>
+      <div class="breadcrumb_bg">
+        <ol class="breadcrumb container">
+          <li>
+            <a href="#">Projects</a>
+          </li>
+          <li class="active">Stage 1</li>
+        </ol>
+      </div>
     </header>
 <%= yield :top %>
     <div role="main" class="container FullPage">
