--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -96,17 +96,21 @@
       <%= yield %>
     </div>
     <footer>
-      <div class="row">
-        <div class="container mtb40">
-          <div class="col-md-8">
-            <h3 class="mb20">Developed by</h3>
-            <a href="//www.unicef.org/" target="_blank" alt="UNICEF Website"><%= image_tag "UNICEF.png" %></a><a href="//ciudadanointeligente.org/" target="_blank" alt="Fundación Ciudadano Inteligente Website"><%= image_tag "FCI.png" %></a> 
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-6 col-sm-6 col-md-8 col-lg-8">
+            <p class="brand" href="#">Wizard <span>Beta</span></p>
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec .</p>
+              </div>
+            </div>
           </div>
-          <div class="col-md-4">
-            <h3 class="mb20">Contact</h3>
-            <p><i class="fa fa-phone"></i> +56 2 2419 2770</p>
-            <p><i class="fa fa-envelope"></i> <a href="#">Contacto Prensa</a></p>
-            <p><i class="fa fa-map-marker"></i>Holanda 895, Providencia</p>
+          <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+            <h5>Contact</h5>
+            <p><i class="fa fa-phone-square"></i> +56 2 2419 2770</p>
+            <p><i class="fa fa-envelope"></i> <a href="">Press Contact</a></p>
+            <p><i class="fa fa-map-marker"></i> Holanda 895, Providencia</p>
           </div>
         </div>
       </div>
