title icon information

--- a/app/views/steps/stage1.html.erb
+++ b/app/views/steps/stage1.html.erb
@@ -25,7 +25,7 @@
               <div role="tabpanel" class="tab-pane active" id="data">
               <div class="bg_grey">
                 <button type="button" class="btn btn-warning pull-right">Edit</button>
-                <h4>What do you think the real-world problem? <i class="fa fa-info-circle"></i></h4>
+                <h4>What do you think the real-world problem? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
 
                 <p class="bold">Problem</p>
                 <p>20 per cent of children in country XX live below the poverty line</p>
