--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,7 +110,7 @@
             <h5>Contact</h5>
             <p><i class="fa fa-phone-square"></i> +56 2 2419 2770</p>
             <p><i class="fa fa-envelope"></i> <a href="">Press Contact</a></p>
-            <p><i class="fa fa-map-marker"></i> Holanda 895, Providencia</p>
+            <p>&nbsp;<i class="fa fa-map-marker"></i>&nbsp; Holanda 895, Providencia</p>
           </div>
         </div>
       </div>
