--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -143,3 +143,18 @@ footer a {
   background-color: #fff;
   padding: 10px;
 }
+div.steps table {
+    margin-bottom: 0;
+}
+div.steps table a {
+    color: #e2534b;
+}
+h4.panel-title a, .table_goals a {
+  font-weight: 700;
+  color: #859292;
+}
+h4.title_goals {
+  font-weight: 700;
+  color: #859292;
+  margin-bottom: 30px;
+}
