--- a/app/views/steps/project_index.html.erb
+++ b/app/views/steps/project_index.html.erb
@@ -76,7 +76,7 @@
 	  	<div class="panel-heading">
   			<table class="table_goals">
   			<tr title="Stage Uninitiated or Incomplete">
-  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
   				<td><a data-toggle="collapse" href="#goal0" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the Government revises the National HIV Strategy and includes women at risk among targeted and PMTCT among critical strategies</a></td>
   			</tr>
   			</table> 
@@ -89,23 +89,23 @@
 		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>List actors and power map</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Identify enabling factors and barriers</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define the interim outcomes and activities</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define theory of change</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
@@ -120,7 +120,7 @@
 	  	<div class="panel-heading">
   			<table class="table_goals">
   			<tr title="Stage Uninitiated or Incomplete">
-  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
   				<td><a data-toggle="collapse" href="#goal1" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the National Assembly/Government revises the Health Insurance policy framework to expand coverage to disadvantaged informal workers and their families and to include PMTCT in the benefit package</a></td>
   			</tr>
   			</table> 
@@ -133,23 +133,23 @@
 		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>List actors and power map</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Identify enabling factors and barriers</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define the interim outcomes and activities</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define theory of change</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
@@ -164,7 +164,7 @@
 	  	<div class="panel-heading">
   			<table class="table_goals">
   			<tr title="Stage Uninitiated or Incomplete">
-  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
   				<td><a data-toggle="collapse" href="#goal2" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, donors raise their external assistance to PMTCT</a></td>
   			</tr>
   			</table> 
@@ -177,23 +177,23 @@
 		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>List actors and power map</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Identify enabling factors and barriers</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define the interim outcomes and activities</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define theory of change</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
@@ -208,7 +208,7 @@
 	  	<div class="panel-heading">
   			<table class="table_goals">
   			<tr title="Stage Uninitiated or Incomplete">
-  				<td class="td-w-10p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
+  				<td class="td-w-3p"><i class="fa fa-chevron-circle-right pull-left"></i></td>
   				<td><a data-toggle="collapse" href="#goal3" aria-expanded="false" aria-controls="collapseExample">By the end of 2018, the National Assembly amends the Penal Code to remove detention among the list of sanctions for sex workers</a></td>
   			</tr>
   			</table> 
@@ -221,23 +221,23 @@
 		        		<td><a href="">Understand the institutional and decision-making cycles/Policy process</a></td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>List actors and power map</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Identify enabling factors and barriers</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define the interim outcomes and activities</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Define theory of change</td>
 		        	</tr>
 		        	<tr title="You must complete the previous step">
-		        		<td class="td-w-10p"><i class="fa fa-lock"></i></td>
+		        		<td class="text-center td-w-10p"><i class="fa fa-lock"></i></td>
 		        		<td>Develop menssages</td>
 		        	</tr>
 		        </tbody>
