--- a/app/views/steps/stage1.html.erb
+++ b/app/views/steps/stage1.html.erb
@@ -34,6 +34,50 @@
                 <p class="bold">Focus Area</p>
                 <p>Poverty and hunger</p>
               </div>
+              <div class="bg_grey">
+                <button type="button" class="btn btn-warning pull-right">Add</button>
+                <h4>What do you think are the policy dimensions of the 'real-world' problem? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
+              </div>
+
+              <div class="panel panel-default objetives">
+                <div class="panel-heading">
+                  <button type="button" class="btn btn-warning pull-right">Edit</button>
+                  <h4 class="panel-title"><a data-toggle="collapse" href="#objetive1" aria-expanded="false" aria-controls="collapseExample">Women and children not included as target populations of the National Strategic Plan (epidemy historically concentrated in male drug users)</a></h4>   
+                </div>      
+                <div class="collapse in" id="objetive1">
+                  <button type="button" class="btn btn-info pull-right">Add</button>
+                  <h4>What policy solutions do you propose? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
+                  <table class="table">
+                      <tbody>
+                        <tr>
+                          <td>Amendment to the Penal Code to remove sanctions in the form of detention for sex workers</td>
+                          <td><a href="#" title="Edit"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete"><i class="fa fa-trash"></i></a></td>
+                        </tr>
+                        <tr>
+                          <td>Amendment to the Penal Code to remove sanctions in the form of detention for sex workers</td>
+                          <td><a href="#" title="Edit"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete"><i class="fa fa-trash"></i></a></td>
+                        </tr>
+                        <tr>
+                          <td>Amendment to the Penal Code to remove sanctions in the form of detention for sex workers</td>
+                          <td><a href="#" title="Edit"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete"><i class="fa fa-trash"></i></a></td>
+                        </tr>
+                      </tbody>
+                </table>
+                </div>
+              </div>
+
+              <div class="panel panel-default objetives">
+                <div class="panel-heading">
+                  <button type="button" class="btn btn-warning pull-right">Edit</button>
+                  <h4 class="panel-title"><a data-toggle="collapse" href="#objetive2" aria-expanded="false" aria-controls="collapseExample">PMTCT not included as a priority in the National Strategic Plan (few resources to improve services, campaigns, etc.)- Few donors paying attention to it</a></h4>   
+                </div>      
+                <div class="collapse in" id="objetive2">
+                  <button type="button" class="btn btn-info pull-right">Add</button>
+                  <h4>What policy solutions do you propose? <i class="fa fa-info-circle" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante."></i></h4>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sed arcu ex. Vestibulum eget felis eros. Proin vehicula fermentum augue, eu tristique velit accumsan a. Praesent vel metus ante. Integer tempus, nunc in congue mattis, velit nisl ultrices arcu, eget molestie dui diam suscipit eros</p>
+                </div>
+              </div>
+
               </div>
               <div role="tabpanel" class="tab-pane" id="explication">...</div>
               <div role="tabpanel" class="tab-pane" id="tips">...</div>
@@ -44,3 +88,4 @@
         </div>
       </div>
     </div>
+    
