Basic angular mockup for project index

--- a/app/views/steps/project_index.html.erb
+++ b/app/views/steps/project_index.html.erb
@@ -260,7 +260,9 @@
 
     </div>
     <div role="tabpanel" class="tab-pane" id="dashboard">...</div>
-    <div role="tabpanel" class="tab-pane" id="documents">...</div>
+    <div role="tabpanel" class="tab-pane" id="documents">
+        <%= render "resources" %>
+    </div>
   </div>
 
 </div>
