Added tags to resources and moved project index over to projects

--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -1,19 +1,8 @@
 <div ng-controller="projectResourcesCtrl">
-    <div class="addNew dropdown">
-        <%# link_to 'New Resource', new_resource_path %>
-        <a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" class="btn btn-default">
+    <div>
+        <a class="btn btn-default" ng-click="add_resource()">
         <i class="fa fa-plus-square-o"></i> New Resource
-        <span class="caret"></span>
       </a>
-
-      <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-        <li>
-            <a role="menuitem" tabindex="-1" href="/sandboxes/new">Sandbox</a>
-        </li>
-        <li>
-            <a role="menuitem" tabindex="-1" href="/resources/new">Other Resource</a>
-        </li>
-      </ul>
     </div>
     <div class="clearfix"></div>
           <table id="resources" class="table table-striped table-bordered">
@@ -33,7 +22,7 @@
                     <td>{{resource.id}}</td>
                     <td>{{resource.title}}</td>
                     <td>{{resource.description}}</td>
-                    //<td>{{resource.tag_list}}</td>
+                    <td>{{resource.tag_list}}</td>
                     <td>{{resource.public}}</td>
                     <td>{{resource.updated_at}}</td>
                     <td>
