--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -2,7 +2,7 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt, turpis ac efficitur consequat, erat neque mattis mauris, eget vulputate ex risus vel metus. Phasellus tincidunt at massa sed vehicula. Donec semper vel est eget auctor. Mauris a aliquet felis. Pellentesque eget ultricies mi. Phasellus accumsan neque vel odio interdum sodales. <a href="">+ Read More</a></p>
 
 <div class="addNew dropdown">
-	<%= link_to 'New Resource', new_resource_path %>
+	<%= link_to 'New Resource', new_project_resource_path(@project) %>
 	<a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" class="btn btn-default">
     <i class="fa fa-plus-square-o"></i> New Resource
     <span class="caret"></span>
