--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,43 +1,5 @@
 <h3>New Resource</h3>
 
-<form>
-	<div class="form-group">
-	    <label for="name">Name</label>
-	    <input type="text" class="form-control" id="name">
-	</div>
-	<div class="form-group">
-	    <label for="description">Description</label>
-	    <textarea class="form-control" rows="3"  id="description"></textarea>
-	</div>
-	<div class="form-group">
-	    <label for="link">Link</label>
-	    <div class="input-group">
-			<span class="input-group-addon" id="basic-addon1">http://</span>
-			<input type="text" id="link" class="form-control" aria-describedby="basic-addon1">
-		</div>
-	</div>
-	<div class="form-group tags-group">
-		<h4>Add Tags</h4>
-		<div class="input-group">
-		    <input type="text" class="form-control" placeholder="Tags" id="tags">
-		    <span class="input-group-btn">
-		    	<button class="btn btn-default" type="button">Add</button>
-		    </span>
-	    </div>
-	    <div class="tags">
-	    	<span class="label label-default">Tag1</span>
-	    	<span class="label label-default">Tag2</span>
-	    	<span class="label label-default">Tag3</span>
-	    	<span class="label label-default">Tag4</span>
-	    </div>
-	</div>
-    <div class="form-group checkbox">
-		<label>
-			<input type="checkbox"><b>Public</b>
-		</label>
-	</div>
-	<div class="form-actions">
-		<button type="button" class="btn btn-success">Create Resource</button>
-    	<%= link_to 'Cancel', resources_path %>
-  </div>
-</form>
+<%= render 'form' %>
+
+<%= link_to 'Back', project_path(@project) %>
