--- a/app/views/resources/_form.html.erb
+++ b/app/views/resources/_form.html.erb
@@ -1,10 +1,9 @@
-<%= simple_form_for(@resource) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+<%= simple_form_for [@project, @resource] do |f| %>
+    <%= f.error_notification %>
+    <%= f.input :title %>
+    <%= f.input :description %>
+    <%= f.input :link %>
+    <%= f.input :tag_list %>
+    <%= f.input :public %>
+    <%= f.button :submit, class: "btn btn-success" %>
 <% end %>
