--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -1,14 +1,17 @@
 <div ng-controller="projectResourcesCtrl">
-    <div>
-        <a class="btn btn-default" ng-click="add_resource()">
-        <i class="fa fa-plus-square-o"></i> New Resource
+
+    <div class="addNew dropdown pull-right">
+        <%# link_to 'New Resource', new_resource_path %>
+        <a id="dLabel" data-target="#" href="http://example.com" data-toggle="dropdown" aria-haspopup="true" role="button" aria-expanded="false" class="btn btn-warning">
+        Add Resource
+        <span class="caret"></span>
       </a>
     </div>
     <div class="clearfix"></div>
           <table id="resources" class="table table-striped table-bordered">
             <thead>
               <tr>
-                <th>id</th>
+                <th>Id</th>
                 <th>Name</th>
                 <th>Description</th>
                 <th>Tags</th>
@@ -98,6 +101,7 @@
                   </tr>
             </tbody>
           </table>
+          <div class="clearfix"></div>
     <script type="text/javascript">
     $(document).ready(function(){
         $('#resources').dataTable( {
